$Id: NEWS,v 1.152 2002-02-14 16:50:04 flood Exp $

1.2.5rc2 - CVS
---------------------------------
- New mod_wrap (1.2.3)
- removed contrib/genuser.pl (per TJ)
- added contrib/ftpasswd utility script (contributed by TJ)
- Bug 1318 - sendfile() semantics incorrect under Linux
- Bug 1450 - Timers removed immediately/alarm() return no longer used for
             timing
- Bug 1446 - DefaultServer overrides SocketBindTight

1.2.5rc1 - Released 12/18/2001
---------------------------------
- New mod_sql (4.07)
- New mod_wrap (1.2.2)
- New mod_ldap (2.8.1)
- New Directive: UseGlobbing, allows glibc-based filepath globbing
  to be disabled.
- Bug 1113 - Make.rules for HPUX incorrectly generated
- Bug 1334 - (should have been in 1.2.4, but was missed somehow)
             MaxClients none in VirtualHost forbids connect
- Bug 1368 - umask bug is hopefully squashed for good
- Bug 1389 - fixed hang on PWD
- Bug 1355 - Added POST_CMD_ERR handler to API
- Bug 1396 - DenyFilter works only in server config scope
- Bug 1410 - SIGIO now conditionally compiled
- Bug 1281 - Improper checking of server context
- Bug 1364 - Immediate chown() after file creation
- Bug 1415 - Change allowed contexts for Include
- Bug 1430 - Possible bad handling of Directory contexts
- Bug 1426 - sigsegv on `ls ///////////'
- Bug 1360 - Add getgroups abstraction for auth modules
- Bug 1289 - Increase information passed to timer callbacks
- Bug 1341 - Bad tracking of forked processes
- Bug 1400 - Improper use of MODRET_HASDATA macro
- Bug 1416 - PidFile in <Global> context is unnecessary, even wasteful
- Bug 1429 - Trivial fixes to dispatch reporting
- Bug 1419 - Remove unnecessary colons from PRIVS_ macros
- Bug 1418 - Slight change to exithandler handling to allow module
             finalization slot
- Bug 1392 - Added LOG_CMD_ERR cleanup handler for LIST/NLST/RETR/
             STOR/APPE/STOU, to defer clearing of transfer counters.
- Bug 1391 - ABOR handler now clears session.xfer